# looped-needle-api

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  backend-rules-spec.md  frontend-rules-spec.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 2025-01-27_create_audit_table.py  2025-12-30_test_migration.py  2026-01-02_add_user_profiles_and_brand_ownership.py  2026-01-02_drop_audit_table.py  2026-01-02_make_questionnaire_definition_id_.py  2026-01-04_add_published_status_to_audits.py  2026-01-04_change_audit_instance_default_status_to_.py  2026-01-04_create_audits_table.py  2026-01-04_delete_all_audit_instances.py  2026-01-04_drop_audit_engine_tables_create_audit_.py  2026-01-04_merge_user_profiles_and_audits_heads.py  2026-01-04_rename_audit_instances_to_audits.py  2026-01-04_restrict_audit_statuses_and_delete_all_.py  2026-01-04_update_audits_table_schema_to_match_new_.py  2026-01-05_create_waitlist_table.py  2026-01-06_rules_engine.py  2026-01-08_add_required_field_to_rule_evidence_.py  2026-01-09_add_required_to_workflow_claims.py  2026-01-09_migrate_rules_to_condition_tree.py  2026-01-11_create_evidence_submissions_table.py  2026-01-11_extend_audit_workflows_status.py  2026-01-11_remove_superseded_from_evidence_submissions.py  2026-01-16_add_gemini_fields_to_evidence_.py  2026-01-18_add_evidence_claim_dimension_and_workflow_scores.py  2026-01-18_drop_required_field_from_workflow_claims.py  2026-01-18_remove_audit_data_snapshot_from_.py  2026-01-18_remove_unused_match_context_from_rule_.py  2026-01-18_rename_generation_and_generated_at_to_.py  2026-01-18_rename_workflow_claims_tables_and_.py  2026-01-19_add_criteria_to_evidence_claims.py  2026-01-19_remove_dimension_from_evidence_claims.py  2026-01-27_add_overall_score_and_certification_to_workflows.py  20260101_194744_create_inference_schema.py  20260118_add_evidence_claim_dimension_and_workflow_scores.py  20260118_remove_dimension_column.py  20260118_remove_stale_status.py  20260118_rename_dimension_scores_to_category_scores.py
specs/001-fastapi-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-inference-engine-schema/: data-model.md  expression-evaluator-options.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-profile-data-access/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rules-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-brands-dashboard/: data-model.md  frontend-description.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  database.py  exceptions.py  main.py
src/admin/: __init__.py  constants.py  router.py  schemas.py  service.py
src/audit_engine/: EXPRESSION_SYNTAX.md  __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/audit_workflows/: __init__.py  models.py  router.py  schemas.py  service.py
src/audits/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/auth/: clerk_client.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/brands/: __init__.py  constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/cloud_storage/: __init__.py  gcs_client.py
src/core/: dependencies.py  exception_handlers.py  logging.py  middleware.py  schemas.py
src/evidence_submissions/: __init__.py  admin_router.py  models.py  (+6 more)
tests/: conftest.py
(+74 files in other folders)
